complete all modules ready to run django app

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
     djangomain: https://github.com/django/django/archive/main.tar.gz
 
 commands =
-    pytest --cov=my_app --verbose tests/
+    pytest --cov=flet_django --verbose tests/
 
 [testenv:checks]
 description = Django system checks and missing migrations
@@ -30,8 +30,8 @@ deps =
     black
 
 commands =
-    isort --check-only my_app
-    black --check my_app
+    isort --check-only flet_django
+    black --check flet_django
 
 [testenv:lint]
 description = Python source code linting (flake8, bandit, pydocstyle)
@@ -44,7 +44,7 @@ deps =
     flake8-print
 
 commands =
-    flake8 my_app
+    flake8 flet_django
 
 [testenv:mypy]
 description = Python source code type hints (mypy)
@@ -55,4 +55,4 @@ deps =
     types-simplejson
 
 commands =
-    mypy my_app
+    mypy flet_django
