--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,39 +1,38 @@
 [tool.poetry]
-name = "my-app"
+name = "flet-django"
 version = "0.1.0"
-description = "Project template for Django app, using Poetry."
+description = "Django Flutter Framework."
 license = "MIT"
-authors = ["YunoJuno <code@yunojuno.com>"]
-maintainers = ["YunoJuno <code@yunojuno.com>"]
+authors = ["beret <beret@hipisi.org.pl>"]  # Here is a place for You'r name, contributors welcome!
+maintainers = ["Marysia Software Limited <office@marysia.app>"]  # Here is You'r advertising site.
 readme = "README.md"
-homepage = "https://github.com/yunojuno/poetry-template"
+homepage = "https://marysia.app"
 repository = "https://github.com/yunojuno/poetry-template"
 documentation = "https://github.com/yunojuno/poetry-template"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Web Environment",
     "Framework :: Django",
-    "Framework :: Django :: 3.2",
     "Framework :: Django :: 4.0",
     "Framework :: Django :: 4.1",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
 ]
-packages = [{ include = "my_app" }]
+packages = [{ include = "flet_django" }]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-django = "^3.2 || ^4.0"
+python = "^3.9"
+django = "^4.0"
+flet = "*"
+flet-routed-app = "*"
 
 [tool.poetry.dev-dependencies]
 black = "*"
 coverage = "*"
-flake8 = "^3.9"
+flake8 = "*"
 flake8-bandit = "*"
 flake8-blind-except = "*"
 flake8-docstrings = "*"
@@ -47,6 +46,15 @@ pytest = "*"
 pytest-cov = "*"
 pytest-django = "*"
 tox = "*"
+
+django-extensions = "*"
+django-rest-framework = "*"
+werkzeug = "*"
+
+flet-core = {path = "../flet/sdk/python/packages/flet-core", develop = true}
+flet = {path = "../flet/sdk/python/packages/flet", develop = true}
+flet-routed-app = {path = "../flet-routed-app", develop = true}
+
 
 [build-system]
 requires = ["poetry>=0.12"]
