--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
 packages = [{ include = "flet_django" }]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
 django = "^4.0"
 flet = "*"
 flet-routed-app = "*"
@@ -52,9 +52,9 @@ django-rest-framework = "*"
 werkzeug = "*"
 
 # for local development only
-#flet-core = {path = "../flet/sdk/python/packages/flet-core", develop = true}
-#flet = {path = "../flet/sdk/python/packages/flet", develop = true}
-#flet-routed-app = {path = "../flet-routed-app", develop = true}
+flet-core = {path = "../flet/sdk/python/packages/flet-core", develop = true}
+flet = {path = "../flet/sdk/python/packages/flet", develop = true}
+flet-routed-app = {path = "../flet-routed-app", develop = true}
 
 
 [build-system]
