--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flet-django"
-version = "0.4.3"
+version = "0.4.4"
 description = "Django Flutter Framework."
 license = "MIT"
 authors = ["beret <beret@hipisi.org.pl>"]  # Here is a place for You'r name, contributors welcome!
@@ -60,8 +60,8 @@ werkzeug = "*"
 
 
 # for local development only
-#flet-core = {path = "../flet/sdk/python/packages/flet-core", develop = true}
-#flet = {path = "../flet/sdk/python/packages/flet", develop = true}
+flet-core = {path = "../flet/sdk/python/packages/flet-core", develop = true}
+flet = {path = "../flet/sdk/python/packages/flet", develop = true}
 #flet-routed-app = {path = "../flet-routed-app", develop = true}
 #django = {path = "../django", develop = true}
 
